--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to </h1>
         <h1> <span class="name-highlight">Naim</span> Website</h1>
         <h3>World-class professional web developer</h3>
         <p>Web design & development is a highly demanded skill. web design & development training in Bangladesh has two parts: front end development and backend development. Front end development deals with visual designs of a website. Front end web developer build it using code. The structure will be built using HTML and the layout will be changed using CSS or Javascript if needed.</p>
         </div>
+        <div class="half-width">
+            <img src="images\n1.png" alt="">
+        </div>
     </section>
-    <div class="half-width">
-        <img src="images\n1.png" alt="">
-    </div>
+    
 </body>
 </html>
