--- a/index.html
+++ b/index.html
@@ -13,11 +13,42 @@
         <h1> <span class="name-highlight">Naim</span> Website</h1>
         <h3>World-class professional web developer</h3>
         <p>Web design & development is a highly demanded skill. web design & development training in Bangladesh has two parts: front end development and backend development. Front end development deals with visual designs of a website. Front end web developer build it using code. The structure will be built using HTML and the layout will be changed using CSS or Javascript if needed.</p>
+        <a class="link-button" target=" _blank" href="https://www.linkedin.com/in/abu-saleh-md-naim-813bb61a0/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images\n1.png" alt="">
         </div>
     </section>
-    
+    <section class="dream-area">
+        <div class="half-width">
+        <img src="images\n2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become a Web developer</h3>
+            <p> Are you ready to work at an ever growing sector where every minute 500 websites are created and 70+ new websites are created?</p>
+            <a class="link-button" target="_blank" href="https://github.com/Naim38">VISITE MY GITHUB</a>
+
+        </div>
+
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>FULL Stack Web Dev</h2>
+            <h3 class="name-highlight">2020- Present | Pro level Web Dev</h3>
+            <p> PeopleNTech provides world class web design & development training in Bangladesh. Our experienced training pool follow the world class training modules. Our state of the art computer lab will also ensure the best web design & development training in Bangladesh.</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="name-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p> Backend deals with more advanced functions of the website which is hidden from plain sight. To a backend developer, the functionality of a website is the main issue and they work with CGI programs, Application programming interface (API) & PHP if needed.</p>
+
+        </div>
+
+    </section>
+    <footer>
+        <p id="text-center">€ Naim 2020, all right reserved. </p>
+    </footer>
 </body>
 </html>
